// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DuplicateIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-DuplicateIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M12.75 1h-7.5C4.56 1 4 1.56 4 2.25V3H2.25C1.56 3 1 3.56 1 4.25v9.5c0 .69.56 1.25 1.25 1.25h7.5c.69 0 1.25-.56 1.25-1.25V13h1.75c.69 0 1.25-.56 1.25-1.25v-9.5C14 1.56 13.44 1 12.75 1zM10 13.75c0 .14-.11.25-.25.25h-7.5c-.138 0-.25-.11-.25-.25v-9.5c0-.138.112-.25.25-.25h7.5c.14 0 .25.112.25.25v9.5zm3-2c0 .14-.11.25-.25.25H11V4.25C11 3.56 10.44 3 9.75 3H5v-.75c0-.138.112-.25.25-.25h7.5c.14 0 .25.112.25.25v9.5z"
  />
</Icon>
`;

exports[`DuplicateIcon [common] example testing should match snapshot(s) for 2.clickable 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-DuplicateIcon"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M12.75 1h-7.5C4.56 1 4 1.56 4 2.25V3H2.25C1.56 3 1 3.56 1 4.25v9.5c0 .69.56 1.25 1.25 1.25h7.5c.69 0 1.25-.56 1.25-1.25V13h1.75c.69 0 1.25-.56 1.25-1.25v-9.5C14 1.56 13.44 1 12.75 1zM10 13.75c0 .14-.11.25-.25.25h-7.5c-.138 0-.25-.11-.25-.25v-9.5c0-.138.112-.25.25-.25h7.5c.14 0 .25.112.25.25v9.5zm3-2c0 .14-.11.25-.25.25H11V4.25C11 3.56 10.44 3 9.75 3H5v-.75c0-.138.112-.25.25-.25h7.5c.14 0 .25.112.25.25v9.5z"
  />
</Icon>
`;

exports[`DuplicateIcon [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-DuplicateIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M12.75 1h-7.5C4.56 1 4 1.56 4 2.25V3H2.25C1.56 3 1 3.56 1 4.25v9.5c0 .69.56 1.25 1.25 1.25h7.5c.69 0 1.25-.56 1.25-1.25V13h1.75c.69 0 1.25-.56 1.25-1.25v-9.5C14 1.56 13.44 1 12.75 1zM10 13.75c0 .14-.11.25-.25.25h-7.5c-.138 0-.25-.11-.25-.25v-9.5c0-.138.112-.25.25-.25h7.5c.14 0 .25.112.25.25v9.5zm3-2c0 .14-.11.25-.25.25H11V4.25C11 3.56 10.44 3 9.75 3H5v-.75c0-.138.112-.25.25-.25h7.5c.14 0 .25.112.25.25v9.5z"
  />
</Icon>
`;
